2018.8/_sources/plugins/available/feature-table/summarize.txt
summarize: Summarize table
==========================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime feature-table summarize [OPTIONS]

     Generate visual and tabular summaries of a feature table.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency | PresenceAbsence | RelativeFrequency]
                                     The feature table to be summarized.
                                     [required]
     --m-sample-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. The sample
                                     metadata.  [optional]
     --o-visualization VISUALIZATION PATH
                                     [required if not passing --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.feature_table.visualizers import summarize

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Summarize table

   Generate visual and tabular summaries of a feature table.

   Parameters
   ----------
   table : FeatureTable[Frequency | PresenceAbsence | RelativeFrequency]
       The feature table to be summarized.
   sample_metadata : Metadata, optional
       The sample metadata.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>